--- a/css/all.css
+++ b/css/all.css
@@ -32,14 +32,17 @@ nav{
 
 ul{
     list-style:none;
+}
+
+li{
     display: inline;
-    }
+}
 
 
-    main img{
-        width:80px;
-        height:70px;
-    }
+main img{
+    width:80px;
+    height:70px;
+}
 
 a{text-decoration:none;}
 
