--- a/css/all.css
+++ b/css/all.css
@@ -46,6 +46,10 @@ main img{
 
 a{text-decoration:none;}
 
+a:link{
+    color:rgba(255, 255, 255, 0.808);
+}
+
 a:hover{
     color:rgba(255, 245, 236, 0.808);
     background-color:rgb(172, 145, 121);
