update almost done

--- a/css/all.css
+++ b/css/all.css
@@ -103,7 +103,7 @@ a:visited{
 
 
 #t td{
-    width:80px;
+    width:100px;
     border: 1px solid;
 }
 
@@ -124,5 +124,11 @@ font{
 #chefOnly{
     color: rgb(77, 117, 226);
     font-weight:lighter;
+}
+
+.chef_button{
+    width: 90px;
+    margin: 0px 0px 0px 1px;
+    align: left;
 }
 
